# CIRNO_MathAndScienceAgent

./: .gitignore  Dockerfile  README.md  entrypoint.sh  pyproject.toml
cirno_math_and_science_agent/: __init__.py  __main__.py  agent.py  agent_executor.py  config.py  data_models.py  essay_manager.py  logger_config.py  main.py  prompts.py  request_wolfram.py  tool.py
