[project]
name = "cirno-math-and-science-agent"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "a2a>=0.44",
    "a2a-sdk[all]>=0.3.22",
    "fitz>=0.0.1.dev2",
    "httpx>=0.28.1",
    "langchain>=1.2.8",
    "langchain-openai>=1.1.7",
    "litellm>=1.81.16",
    "pydantic>=2.12.5",
    "pydantic-settings>=2.12.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
science_and_math_agent_app = "cirno_math_and_science_agent.__main__:run"
